added icon and publisher ID

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "SplitView",
   "description": "Preview webpages in a split editor view with browser-like interface",
   "version": "0.1.0",
+  "publisher": "mirzaglitch",
+  "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Mirza-Glitch/split-view-vscode-extension.git"
